crates/pg_syntax/tests/snapshots/postgres_regress/select_into@45.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT make_table();
---
SelectStmt@0..20
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..17
    FuncCall@7..17
      Ident@7..17 "make_table"
  Ascii40@17..18 "("
  Ascii41@18..19 ")"
  Ascii59@19..20 ";"

