crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@103.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into bmscantest select r, 'fooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo' FROM generate_series(1,100000) r;"
---
InsertStmt@0..133
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "bmscantest"
  Whitespace@22..23 " "
  SelectStmt@23..132
    Select@23..29 "select"
    Whitespace@29..30 " "
    ResTarget@30..31
      ColumnRef@30..31
        Ident@30..31 "r"
    Ascii44@31..32 ","
    Whitespace@32..33 " "
    ResTarget@33..99
      AConst@33..99
        Sconst@33..99 "'fooooooooooooooooooo ..."
    Whitespace@99..100 " "
    From@100..104 "FROM"
    Whitespace@104..105 " "
    RangeFunction@105..132
      List@105..129
        FuncCall@105..129
          Ident@105..120 "generate_series"
          Ascii40@120..121 "("
          AConst@121..122
            Iconst@121..122 "1"
          Ascii44@122..123 ","
          AConst@123..129
            Iconst@123..129 "100000"
      Ascii41@129..130 ")"
      Whitespace@130..131 " "
      Alias@131..132
        Ident@131..132 "r"
  Ascii59@132..133 ";"

