crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@105.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select count(*) from bmscantest where a>1;
---
SelectStmt@0..42
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..31
    Ident@21..31 "bmscantest"
  Whitespace@31..32 " "
  Where@32..37 "where"
  Whitespace@37..38 " "
  AExpr@38..41
    ColumnRef@38..39
      Ident@38..39 "a"
    Ascii62@39..40 ">"
    AConst@40..41
      Iconst@40..41 "1"
  Ascii59@41..42 ";"

