crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@111.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create function explain_parallel_sort_stats() returns setof text\nlanguage plpgsql as\n$$\ndeclare ln text;\nbegin\n    for ln in\n        explain (analyze, timing off, summary off, costs off)\n          select * from\n          (select ten from tenk1 where ten < 100 order by ten) ss\n          right join (values (1),(2),(3)) v(x) on true\n    loop\n        ln := regexp_replace(ln, 'Memory: \\S*',  'Memory: xxx');\n        return next ln;\n    end loop;\nend;\n$$;"
---
CreateFunctionStmt@0..452
  Create@0..6 "create"
  Whitespace@6..7 " "
  Function@7..15 "function"
  Whitespace@15..16 " "
  Ident@16..43 "explain_parallel_sort ..."
  Ascii40@43..44 "("
  Ascii41@44..45 ")"
  Whitespace@45..46 " "
  Returns@46..53 "returns"
  Whitespace@53..54 " "
  Setof@54..59 "setof"
  Whitespace@59..60 " "
  TypeName@60..64
    TextP@60..64 "text"
  Newline@64..65 "\n"
  DefElem@65..81
    Language@65..73 "language"
    Whitespace@73..74 " "
    Ident@74..81 "plpgsql"
  Whitespace@81..82 " "
  DefElem@82..451
    As@82..84 "as"
    Newline@84..85 "\n"
    List@85..451
      Sconst@85..451 "$$\ndeclare ln text;\nb ..."
  Ascii59@451..452 ";"

