crates/pg_syntax/tests/snapshots/postgres_regress/select_parallel@112.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select * from explain_parallel_sort_stats();
---
SelectStmt@0..44
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..41
    List@14..41
      FuncCall@14..41
        Ident@14..41 "explain_parallel_sort ..."
  Ascii40@41..42 "("
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

